--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div class="box">
         <div class="container custom-c" id="container">
             <img src="assets/Smarti-Coach.png" alt="Smarti-Coach" style="width:auto; height:80px;">
-            <h4>WELCOME!</h4>
-            <p>Please select your primary activity. <br>This will be your homepage. <br><i>(You can still change this option in settings.)</i></p>
+            <h3><b>WELCOME!</b></h3>
+            <p>Please select your primary activity. <br>This will be your homepage.</p>
         </div>
         <div class="btn-container">
             <button class="btn">DANCE</button>
